5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1798_2570.log
== TEST (2019-06-12 12:51:13) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

from i in x:
	n = n + abs(i - m)
n = n ** size(x)
print(n)
-- ERROR:
File "XXXX", line 9
    from i in x:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:32) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

from i in x:
	n = n + abs(i - m)
n = n ** size(x)
print(n)
-- ERROR:
File "XXXX", line 9
    from i in x:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:39) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

from i x:
	n = n + abs(i - m)
n = n ** size(x)
print(n)
-- ERROR:
File "XXXX", line 9
    from i x:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:43) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

from i in x:
	n = n + abs(i - m)
n = n ** size(x)
print(n)
-- ERROR:
File "XXXX", line 9
    from i in x:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:11) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** size(x)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:38) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** size(x)
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:53:05) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/size(x))
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:53:16) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/size(x))
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:59:26) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/size(x))
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:00:27) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/size(x))
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:00:40) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/size(x))
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:03:21) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/2)
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:03:47) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/2)
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:04:05) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/2)
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:04:21) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/2)
print(n, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:02) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + abs(i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:38) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + (i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:42) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + (i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:18) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n + (i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:24) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n * abs(i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:01) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	n = n * abs(i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:11:46) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	if n == 0:
		n = n + abs(i - m)
	else:
		n = n + abs(i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:05) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	if n == 0:
		n = n + abs(i - m)
	else:
		n = n * abs(i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:12:22) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("vetor: ")))

m = sum(x)/size(x)
n = 0 

for i in x:
	if n == 0:
		n = n + abs(i - m)
	else:
		n = n * abs(i - m)
n = n ** (1/size(x))
print(round(n, 3))
-- EXECUTION TIME:
0.8534
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
